[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
openpyxl = ">=3.1.5"
plotly = ">=6.0.0"
requests = ">=2.32.3"
streamlit = ">=1.42.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
