[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
requests = "^2.31.0"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
